deploy/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spiritx-system
---
# Source: modelzoo/templates/agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modelzoo
    component: agent
  name: agent
  namespace: "spiritx-system"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: agent
---
# Source: modelzoo/templates/autoscaler-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modelzoo
    component: autoscaler
  name: autoscaler
  namespace: "spiritx-system"
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: autoscaler
---
# Source: modelzoo/templates/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modelzoo
    component: prometheus
  name: prometheus
  namespace: "spiritx-system"
spec:
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
  selector:
    app: prometheus
---
# Source: modelzoo/templates/agent-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modelzoo
    component: agent
  name: agent
  namespace: "spiritx-system"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
      labels:
        app: agent
    spec:
      priorityClassName: modelzoo
      serviceAccountName: modelzoo-operator
      containers:
        - name: agent
          resources:
            limits:
              cpu: "2"
              memory: 8Gi
            requests:
              cpu: 100m
              memory: 120Mi
          image: "harbor.xz.com:8443/modelzooai/modelzoo-agent:v0.0.28.rc.4"
          imagePullPolicy: IfNotPresent
          command:
            - /usr/bin/agent
            - --debug
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 10001
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /healthz
              port: 8080
          volumeMounts:
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
# Source: modelzoo/templates/autoscaler-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modelzoo
    component: autoscaler
  name: autoscaler
  namespace: "spiritx-system"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoscaler
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "false"
      labels:
        app: autoscaler
    spec:
      priorityClassName: modelzoo
      volumes:
      containers:
        - name:  autoscaler
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 128Mi
          image: "harbor.xz.com:8443/modelzooai/modelzoo-autoscaler:v0.0.28.rc.4"
          imagePullPolicy: IfNotPresent
          command:
            - "/usr/bin/autoscaler"
            - --debug
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /system/info
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              path: /system/info
              port: 8080
---
# Source: modelzoo/templates/ingress-operator-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modelzoo
    component: ingress-operator
  name: ingress-operator
  namespace: "spiritx-system"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-operator
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: ingress-operator
    spec:
      priorityClassName: modelzoo
      serviceAccountName: ingress-operator
      containers:
        - name: operator
          command:
            - /usr/bin/ingress-operator
            - --host
            - "agent"
            - --namespace
            - "default"
            - --debug
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 50m
              memory: 128Mi
          image: "harbor.xz.com:8443/modelzooai/ingress-operator:v0.0.28.rc.4"
          imagePullPolicy: IfNotPresent
---
# Source: modelzoo/templates/modelzooetes-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modelzoo
    component: modelzooetes
  name: modelzooetes
  namespace: "spiritx-system"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modelzooetes
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
      labels:
        app: modelzooetes
    spec:
      priorityClassName: modelzoo
      serviceAccountName: modelzoo-operator
      volumes:
      containers:
        - name: modelzooetes
          resources:
            limits:
              cpu: 1000m
              memory: 3Gi
            requests:
              cpu: 100m
              memory: 120Mi
          image: "harbor.xz.com:8443/modelzooai/modelzooetes:v0.0.28.rc.4"
          imagePullPolicy: IfNotPresent
          command:
            - /usr/bin/modelzooetes
---
# Source: modelzoo/templates/prometheus-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modelzoo
    component: prometheus
  name: prometheus
  namespace: "spiritx-system"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        sidecar.istio.io/inject: "true"
        checksum/prometheus-config: "e4aaa6764b6cc0fa5685e8ca40d7b22bc64f0c720fca9d3857fa61301941b336"
    spec:
      priorityClassName: modelzoo
      serviceAccountName: modelzoo-prometheus
      containers:
        - name: prometheus
          resources:
            limits:
              cpu: 1000m
              memory: 6Gi
            requests:
              cpu: 100m
              memory: 6Gi
          image: harbor.xz.com:8443/library/prom/prometheus:v2.41.0
          command:
            - "prometheus"
            - "--config.file=/etc/prometheus/prometheus.yml"
          imagePullPolicy:
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            timeoutSeconds: 30
          ports:
            - containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-config
              subPath: prometheus.yml
            - mountPath: /etc/prometheus/prometheus-rules.yml
              name: prometheus-config
              subPath: prometheus-rules.yml
            - mountPath: /etc/prometheus/alert.rules.yml
              name: prometheus-config
              subPath: alert.rules.yml
            - mountPath: /prometheus/data
              name: prom-data
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
            items:
              - key: prometheus.yml
                path: prometheus.yml
                mode: 0644
              - key: alert.rules.yml
                path: alert.rules.yml
                mode: 0644
              - key: prometheus-rules.yml
                path: prometheus-rules.yml
                mode: 0644
        - name: prom-data
          emptyDir: {}
---
# Source: modelzoo/templates/agent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: modelzoo
    component: agent
  name: agent
  namespace: "spiritx-system"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: agent
                port:
                  number: 8080
            path: /(.*)
            pathType: Prefix
